<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffa65"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/RelativeLayout"
        android:layout_width="0dp"
        android:layout_height="380dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/im_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@drawable/body" />

        <ImageView
            android:id="@+id/im_nose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:srcCompat="@drawable/nose" />

        <ImageView
            android:id="@+id/im_shoes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:srcCompat="@drawable/shoes" />

        <ImageView
            android:id="@+id/im_hat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:srcCompat="@drawable/hat" />

        <ImageView
            android:id="@+id/im_ears"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:srcCompat="@drawable/ears" />

        <ImageView
            android:id="@+id/im_eyebrows"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:srcCompat="@drawable/eyebrows" />

        <ImageView
            android:id="@+id/im_eyes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:srcCompat="@drawable/eyes" />

        <ImageView
            android:id="@+id/im_mouth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:srcCompat="@drawable/mouth" />

        <ImageView
            android:id="@+id/im_mustache"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:srcCompat="@drawable/mustache" />

        <ImageView
            android:id="@+id/im_glasses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:srcCompat="@drawable/glasses" />

        <ImageView
            android:id="@+id/im_arms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:srcCompat="@drawable/arms" />

    </RelativeLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/GridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RelativeLayout">

        <CheckBox
            android:id="@+id/checkBox_Hat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10sp"
            android:buttonTint="#1abc9c"
            android:text="@string/hat_text"
            android:textColor="#2c2c54"
            android:textStyle="bold|italic"
            app:layout_column="0"
            app:layout_row="0" />

        <CheckBox
            android:id="@+id/checkBox_Eyebrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:buttonTint="#1abc9c"
            android:text="@string/eyebrows_text"
            android:textColor="#2c2c54"
            android:textStyle="bold|italic"
            app:layout_column="0"
            app:layout_row="1" />

        <CheckBox
            android:id="@+id/checkBox_Nose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:buttonTint="#1abc9c"
            android:text="@string/nose_text"
            android:textColor="#2c2c54"
            android:textStyle="bold|italic"
            app:layout_column="0"
            app:layout_row="2" />

        <CheckBox
            android:id="@+id/checkBox_Mustache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:buttonTint="#1abc9c"
            android:text="@string/mustache_text"
            android:textColor="#2c2c54"
            android:textStyle="bold|italic"
            app:layout_column="0"
            app:layout_row="3" />

        <CheckBox
            android:id="@+id/checkBox_Arms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:buttonTint="#1abc9c"
            android:text="@string/arms_text"
            android:textColor="#2c2c54"
            android:textStyle="bold|italic"
            app:layout_column="0"
            app:layout_row="4" />

        <CheckBox
            android:id="@+id/checkBox_Eyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:buttonTint="#1abc9c"
            android:text="@string/eyes_text"
            android:textColor="#2c2c54"
            android:textStyle="bold|italic"
            app:layout_column="1"
            app:layout_row="0" />

        <CheckBox
            android:id="@+id/checkBox_Glasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:buttonTint="#1abc9c"
            android:text="@string/glasses_text"
            android:textColor="#2c2c54"
            android:textStyle="bold|italic"
            app:layout_column="1"
            app:layout_row="1" />

        <CheckBox
            android:id="@+id/checkBox_Mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:buttonTint="#1abc9c"
            android:text="@string/mouth_text"
            android:textColor="#2c2c54"
            android:textStyle="bold|italic"
            app:layout_column="1"
            app:layout_row="2" />

        <CheckBox
            android:id="@+id/checkBox_Ears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:buttonTint="#1abc9c"
            android:text="@string/ears_text"
            android:textColor="#2c2c54"
            android:textStyle="bold|italic"
            app:layout_column="1"
            app:layout_row="3" />

        <CheckBox
            android:id="@+id/checkBox_Shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:buttonTint="#1abc9c"
            android:text="@string/shoes_text"
            android:textColor="#2c2c54"
            android:textStyle="bold|italic"
            app:layout_column="1"
            app:layout_row="4" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>